# amaze

./: CMakeLists.txt  Makefile  NEW_README.md  README.md
shaders/: gridshader.frag  gridshader.vert  wallshader.frag  wallshader.vert  wireframe.frag  wireframe.vert
src/: amaze.cpp  amaze.h
src/imgui/: imgui_impl_opengl3.cpp  myimgui.cpp  myimgui.h
src/opengl/: opengl.cpp
